cabal-version:      3.4
name:               pbt-final
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             TG
maintainer:         kmuhindi@protonmail.ch
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:``

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        MyLib
        TestContract
    -- other-modules:
    -- other-extensions:
    build-depends: base ^>=4.14.3.0
                , bytestring
                , cardano-api
                , filepath
                , plutus-core
                , plutus-ledger
                , plutus-ledger-api
                , plutus-tx
                , plutus-tx-plugin
                , serialise
                , aeson
    
    hs-source-dirs:   src
    default-language: Haskell2010
